#ifndef _INCLUDE_HPP_
#define _INCLUDE_HPP_

#include "addFriends.h"
#include "AllFiles.h"
#include "city.hpp"
#include "config.pb.h"
#include "ConfigSet.h"
#include "datadefine.h"
#include "do_ref.h"
#include "FileDownLog.h"
#include "fileinfo.hpp"
#include "FriendShared.h"
#include "MFCApplication1.h"
#include "Main_Tab.h"
#include "Main_UI.h"
#include "MFCApplication1Dlg.h"
#include "mytab.h"
#include "utility.hpp"
#include "targetver.h"
#include "stdafx.h"
#include "resource.h"
#include "reg_info.h"
#include "reg.h"

#include "uuid.hpp"


#endif //_INCLUDE_HPP_
